--- a/projects/07/VMtranslator/CMakeLists.txt
+++ b/projects/07/VMtranslator/CMakeLists.txt
@@ -4,10 +4,10 @@ project(VMtranslator)
 
 add_executable(
     ${PROJECT_NAME}
-    cpp/main.cpp
-    cpp/VMparser.cpp
-    cpp/CodeWriter.cpp
-    cpp/utility.cpp
+    src/main.cpp
+    src/VMparser.cpp
+    src/CodeWriter.cpp
+    src/utility.cpp
 )
 
 target_include_directories(
@@ -15,3 +15,5 @@ target_include_directories(
     PRIVATE
         ${PROJECT_SOURCE_DIR}/include
 )
+
+add_compile_options(-O0 -g)
