--- a/projects/08/.vscode/settings.json
+++ b/projects/08/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "vector": "cpp"
+        "vector": "cpp",
+        "string": "cpp"
     },
     "cmake.sourceDirectory": "${workspaceFolder}/VMtranslator",
     "cmake.configureOnOpen": true
